<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <EditText
                android:id="@+id/et_productId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:hint="请输入商品id"/>

            <Button
                android:id="@+id/bt_query_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getProductInfo"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:textAllCaps="false" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_obtainPurchased"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/obtainOwnedPurchases"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tvProductType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="请选择商品类型" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <RadioButton
                android:id="@+id/radio_consumed_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="消耗型" />

            <RadioButton
                android:id="@+id/radio_unconsumed_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="非消耗型" />

            <RadioButton
                android:id="@+id/radio_subscribe_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="订阅型" />

        </RadioGroup>

        <Switch
            android:id="@+id/swNeedSandboxTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:minHeight="48dp"
            android:text="setNeedSandboxTest(是否沙盒支付)" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="//非必选，使用沙盒支付需要开通沙盒支付，在荣耀开发者服务平台-应用-分发-应用内支付服务-沙盒测试页面新增沙盒帐号.设置setNeedSandboxTest沙盒支付时，需要传值0或1,传1代表沙盒支付。具体请参见《沙盒配置》文档"
            android:textColor="@color/grey"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="发起购买" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/bt_createProductOrder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/createProductOrderIntent"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/bt_createProductOrderWithPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/createProductOrderIntentWithPrice"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textAllCaps="false" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_cancelSubscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelSubscription"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/bt_obtainPurchaseRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/obtainPurchaseRecord"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tv_logInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/callback_text_style"/>

        <TextView
            android:id="@+id/tv_consume_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/callback_text_style"/>

    </LinearLayout>

</ScrollView>